--- a/front/src/App.css
+++ b/front/src/App.css
@@ -6,7 +6,7 @@ ul > li {
   width: 55px;
   height: 55px;
   border-radius: 50%;
-  background: #db4437;
+  background: #4aba70;
   position: fixed;
   bottom: 50px;
   right: 50px;
@@ -234,4 +234,103 @@ ul > li {
   max-height: 85vh;
   min-height: 85vh;
   overflow-y: scroll;
+}
+
+/* Form login classes */
+
+.form-control {
+  box-shadow: none;
+  border-color: #ddd;
+}
+.form-control:focus {
+  border-color: #4aba70; 
+}
+.login-form {
+      width: 350px;
+  margin: 0 auto;
+  padding: 30px 0;
+}
+  .login-form form {
+      color: #434343;
+  border-radius: 1px;
+    margin-bottom: 15px;
+      background: #fff;
+  border: 1px solid #f3f3f3;
+      box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+      padding: 30px;
+}
+.login-form h4 {
+  text-align: center;
+  font-size: 22px;
+      margin-bottom: 20px;
+}
+  .login-form .avatar {
+      color: #fff;
+  margin: 0 auto 30px;
+      text-align: center;
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  z-index: 9;
+  background: #4aba70;
+  padding: 15px;
+  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.1);
+}
+  .login-form .avatar i {
+      font-size: 62px;
+  }
+  .login-form .form-group {
+      margin-bottom: 20px;
+  }
+.login-form .form-control, .login-form .btn {
+  min-height: 40px;
+  border-radius: 2px; 
+      transition: all 0.5s;
+}
+.login-form .close {
+      position: absolute;
+  top: 15px;
+  right: 15px;
+}
+.login-form .btn {
+  background: #4aba70;
+  border: none;
+  line-height: normal;
+}
+.login-form .btn:hover, .login-form .btn:focus {
+  background: #42ae68;
+}
+  .login-form .checkbox-inline {
+      float: left;
+  }
+  .login-form input[type="checkbox"] {
+      margin-top: 2px;
+  }
+  .login-form .forgot-link {
+      float: right;
+  }
+  .login-form .small {
+      font-size: 13px;
+  }
+  .login-form a {
+      color: #4aba70;
+  }
+
+.btn-success {
+  background-color: #4aba70;
+  border-color: #4aba70;
+}
+
+.btn-event {
+  color: #4aba70;
+  border-color: #4aba70;
+}
+
+.btn-event:hover {
+  background-color: #4aba70;
+  color: #fff;
+}
+
+.nav-link:hover { 
+  color: #4aba70;
 }
