--- a/front/src/App.css
+++ b/front/src/App.css
@@ -334,3 +334,13 @@ ul > li {
 .nav-link:hover { 
   color: #4aba70;
 }
+
+.btn-submit-event {
+  background-color: #4aba70;
+  border-color: #4aba70;
+}
+
+.btn-submit-event:hover {
+  background-color: #278446;
+  border-color: #278446;
+}
