--- a/front/src/App.css
+++ b/front/src/App.css
@@ -6,7 +6,7 @@ ul > li {
   width: 55px;
   height: 55px;
   border-radius: 50%;
-  background: #4aba70;
+  background: #69AF3F;
   position: fixed;
   bottom: 50px;
   right: 50px;
@@ -243,7 +243,7 @@ ul > li {
   border-color: #ddd;
 }
 .form-control:focus {
-  border-color: #4aba70; 
+  border-color: #69AF3F; 
 }
 .login-form {
       width: 350px;
@@ -272,7 +272,7 @@ ul > li {
   height: 100px;
   border-radius: 50%;
   z-index: 9;
-  background: #4aba70;
+  background: #69AF3F;
   padding: 15px;
   box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.1);
 }
@@ -293,7 +293,7 @@ ul > li {
   right: 15px;
 }
 .login-form .btn {
-  background: #4aba70;
+  background: #69AF3F;
   border: none;
   line-height: normal;
 }
@@ -313,31 +313,31 @@ ul > li {
       font-size: 13px;
   }
   .login-form a {
-      color: #4aba70;
+      color: #69AF3F;
   }
 
 .btn-success {
-  background-color: #4aba70;
-  border-color: #4aba70;
+  background-color: #69AF3F;
+  border-color: #69AF3F;
 }
 
 .btn-event {
-  color: #4aba70;
-  border-color: #4aba70;
+  color: #69AF3F;
+  border-color: #69AF3F;
 }
 
 .btn-event:hover {
-  background-color: #4aba70;
+  background-color: #69AF3F;
   color: #fff;
 }
 
 .nav-link:hover { 
-  color: #4aba70;
+  color: #69AF3F;
 }
 
 .btn-submit-event {
-  background-color: #4aba70;
-  border-color: #4aba70;
+  background-color: #69AF3F;
+  border-color: #69AF3F;
 }
 
 .btn-submit-event:hover {
